# controllers/users.js
@@ -1,45 +1,44 @@
 const mongodb = require('../data/database');
 const ObjectId = require('mongodb').ObjectId;
 
-const getAll = async (req, res) => {
-    //#swagger.tags=['Users']
-    const result = await mongodb.getDatabase().db().collection('personalinfo', 'books').find();
-    result.toArray(err, lists).then((users) => {
-        if (err){
-            res.status(400).json({ message: err});
-        }
+const getAll = async (_req, res) => {
+    //#swagger.tags=['personalinfo']
+    try {
+        const personalinfo = await mongodb.getDatabase().db().collection('personalinfo').find().toArray();
+        const books = await mongodb.getDatabase().db().collection('books').find().toArray();
         res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(users);
-    });
+        res.status(200).json({ personalinfo, books });
+    } catch (error) {
+        res.status(400).json({ message: error.message });
+    }
 };
 
 const getSingle = async (req, res) => {
-    //#swagger.tags=['Users']
+    //#swagger.tags=['personalinfo']
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json('Must use a valid user id to find a contact.');
-      }
+        return res.status(400).json('Must use a valid user id to find a contact.');
+    }
 
     const userId = new ObjectId(req.params.id);
-    const result = await mongodb.getDatabase().db().collection('personalinfo', 'books').find({ _id: userId });
-    result.toArray(err, result).then((users) => {
-        if (err){
-            res.status(400).json({ message: err});
-        }
+    try {
+        const personalinfo = await mongodb.getDatabase().db().collection('personalinfo').findOne({ _id: userId });
+        const books = await mongodb.getDatabase().db().collection('books').find({ userId: userId }).toArray();
         res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(users);
-    });
-
+        res.status(200).json({ personalinfo, books });
+    } catch (error) {
+        res.status(400).json({ message: error.message });
+    }
 };
 
 const createUser = async (req, res) => {
-    //#swagger.tags=['Users']
+    //#swagger.tags=['personalinfo']
     const user = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
         email: req.body.email,
         address: req.body.address,
         phoneNumber: req.body.phoneNumber
-    }
+    };
 
     const books = {
         bookTitle: req.body.bookTitle,
@@ -48,31 +47,42 @@ const createUser = async (req, res) => {
         dateBorrowed: req.body.dateBorrowed,
         dateReturn: req.body.dateReturn,
         phoneNumber: req.body.phoneNumber,
-        librarian: req.body.librarian
-    }
+        librarian: req.body.librarian,
+        userId: null // This will be set after inserting the user
+    };
 
-    const response = await mongodb.getDatabase().db().collection('users').insertOne(user, books);
-    if (response.acknowledged > 0) {
-        res.status(204).send();
-    } else {
-        res.status(500),json(response.error || 'Some error accured while updating the user.');
+    try {
+        const userResponse = await mongodb.getDatabase().db().collection('personalinfo').insertOne(user);
+        if (userResponse.acknowledged) {
+            books.userId = userResponse.insertedId;
+            const booksResponse = await mongodb.getDatabase().db().collection('books').insertOne(books);
+            if (booksResponse.acknowledged) {
+                res.status(201).send();
+            } else {
+                res.status(500).json(booksResponse.error || 'Some error occurred while creating the books.');
+            }
+        } else {
+            res.status(500).json(userResponse.error || 'Some error occurred while creating the user.');
+        }
+    } catch (error) {
+        res.status(500).json({ message: error.message });
     }
 };
 
 const updateUser = async (req, res) => {
-    //#swagger.tags=['Users']
+    //#swagger.tags=['personalinfo']
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json('Must use a valid contact id to update a contact.');
-      }
+        return res.status(400).json('Must use a valid contact id to update a contact.');
+    }
 
     const userId = new ObjectId(req.params.id);
-     const user = {
+    const user = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
         email: req.body.email,
         address: req.body.address,
         phoneNumber: req.body.phoneNumber
-    }
+    };
 
     const books = {
         bookTitle: req.body.bookTitle,
@@ -82,32 +92,40 @@ const updateUser = async (req, res) => {
         dateReturn: req.body.dateReturn,
         phoneNumber: req.body.phoneNumber,
         librarian: req.body.librarian
-    }
+    };
 
-    const response = await mongodb.getDatabase().db().collection('users').replaceOne({ _id: userId }, user, books);
-    console.log(response);
-    if (response.modifiedCount > 0) {
-        res.status(204).send();
-    } else {
-        res.status(500),json(response.error || 'Some error accured while updating the user.');
+    try {
+        const userResponse = await mongodb.getDatabase().db().collection('personalinfo').replaceOne({ _id: userId }, user);
+        const booksResponse = await mongodb.getDatabase().db().collection('books').replaceOne({ userId: userId }, books);
+        if (userResponse.modifiedCount > 0 && booksResponse.modifiedCount > 0) {
+            res.status(204).send();
+        } else {
+            res.status(500).json(userResponse.error || booksResponse.error || 'Some error occurred while updating the user.');
+        }
+    } catch (error) {
+        res.status(500).json({ message: error.message });
     }
 };
 
 const deleteUser = async (req, res) => {
-    //#swagger.tags=['Users']
+    //#swagger.tags=['personalinfo']
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json('Must use a valid contact id to delete a contact.');
-      }
+        return res.status(400).json('Must use a valid contact id to delete a contact.');
+    }
 
     const userId = new ObjectId(req.params.id);
-    const response = await mongodb.getDatabase().db().collection('users').deleteOne({ _id: userId });
-    console.log(response);
-    if (response.deletedCount > 0) {
-        res.status(204).send();
-    } else {
-        res.status(500),json(response.error || 'Some error accured while updating the user.');
+    try {
+        const userResponse = await mongodb.getDatabase().db().collection('personalinfo').deleteOne({ _id: userId });
+        const booksResponse = await mongodb.getDatabase().db().collection('books').deleteMany({ userId: userId });
+        if (userResponse.deletedCount > 0 && booksResponse.deletedCount > 0) {
+            res.status(204).send();
+        } else {
+            res.status(500).json(userResponse.error || booksResponse.error || 'Some error occurred while deleting the user.');
+        }
+    } catch (error) {
+        res.status(500).json({ message: error.message });
     }
-}
+};
 
 module.exports = {
     getAll,
