# routes/index.js
@@ -4,10 +4,10 @@ const router = express.Router();
 router.use('/', require('./swagger'));
 
 router.get('/', (req,res) => { 
-    //#swagger.tags=['Hello Wolrd']
+    //#swagger.tags=['Hello World']
     res.send('Hello World');
 });
 
-router.use('/users', require('./users'));
+router.use('/personalinfo', require('./users'));
 
 module.exports = router;
